@@ -1,14 +1,13 @@
 import logging
 from typing import Iterator
 
-from datariot.__spi__.error import DataRiotImportException, DataRiotException
-from datariot.__spi__.type import Parsed, Parser, FileFilter
+from datariot.__spi__.error import DataRiotException, DataRiotImportException
+from datariot.__spi__.type import FileFilter, Parsed, Parser
 from datariot.__util__.io_util import get_files
 from datariot.parser.docx.docx_mixin import DocumentMixin
 
 
 class DocxParser(Parser, DocumentMixin):
-
     def __init__(self):
         try:
             from docx import Document
@@ -25,14 +24,17 @@ class DocxParser(Parser, DocumentMixin):
 
         elements = [
             *self.parse_elements(document, document.sections[0].header),
-            *self.parse_elements(document, document)
+            *self.parse_elements(document, document),
         ]
 
-        properties = self.parse_custom_properties(path)
+        properties = self.parse_properties(path, document)
+
         return Parsed(path, elements, properties)
 
     @staticmethod
-    def parse_folder(path: str, file_filter: FileFilter = lambda _: True) -> Iterator[Parsed]:
+    def parse_folder(
+        path: str, file_filter: FileFilter = lambda _: True
+    ) -> Iterator[Parsed]:
         for file in get_files(path, ".docx"):
             try:
                 if file_filter(file):
